fixed search function on search page and fixed sideways scrolling on homepage on mobile

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,4 +1,6 @@
-
+.container {
+  max-width: 95vw;
+}
 
 .jumbotron {
   background-color: #DD7373;
